--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SocIO</title>
     <link rel="stylesheet" href="/css/index.css">
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
     <header>
