--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <header>
-        <span>SocIO</span>
-        <div class="js_room"><img src="/img/chat.png"/></div>
+        <span class="title">SocIO</span><img class="h_icon" src="/img/h_icon.png">
+        <div class="js_room"><img src="/img/add.png"/></div>
     </header>
+    <p class="clock"></p>
     <ul class="room_ul">
         <li>
             <div class="room">
@@ -27,7 +28,14 @@
             </div>
         </li>
     </ul>
-    <footer><a href="https://github.com/leye195"><img src="/img/git.png" style="width:50px" alt="https://github.com/leye195"></a></footer>
+    <nav>
+        <a href="/" class="active">
+            <img src="/img/chat_active.png"/><span>Chats</span>
+        </a>
+        <a href="/more">
+            <img src="/img/more.png"/><span>More</span>
+        </a>
+    </nav>
     <div class="login_page">
         <div class="form">
             <h3 class="form_h3">What is your nickname?</h3>
@@ -49,5 +57,7 @@
         </div>
     </div>
     <script src="/js/user.js"></script>
+    <script src="/js/nav.js"></script>
+    <script src="/js/clock.js"></script>
 </body>
 </html>
