--- a/public/html/more.html
+++ b/public/html/more.html
@@ -41,7 +41,10 @@
         </div>
     </div>
     <nav>
-        <a href="/" >
+        <a href="/">
+            <img src="/img/friends.png"/><span>Friends</span>
+        </a>
+        <a href="/chats" >
             <img src="/img/chat.png"/><span>Chats</span>
         </a>
         <a href="/more" class="active">
