--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SocIO</title>
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/friend.css">
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
@@ -13,6 +14,16 @@
         <span class="title">SocIO</span><img class="h_icon" src="/img/h_icon.png">
     </header>
     <p class="clock"></p>
+    <section class="friend_section">
+        <div class="profile_main">
+            <div class="user_div">
+                <img src="/img/user.png"/>
+                <div>
+                    <p class="more_username">Username</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <nav>
         <a href="/" class="active">
             <img src="/img/friends_active.png"/><span>Friends</span>
