--- a/public/html/index.html
+++ b/public/html/index.html
@@ -17,7 +17,7 @@
         <div class="js_friend"><img src="/img/add_friend.png"/></div>
     </header>
     <p class="clock"></p>
-    <div class="f_div">
+    <div class="f_div hide">
         <i class="fa fa-search icon"></i>
         <input class="friend_id" type="text" placeholder="Friend's ID"/>
         <span title="clear">&times;</span>
@@ -36,6 +36,16 @@
             <p>Friends</p>
             <img class="friend_arrow up" src="/img/up_arrow.png">
         </div>
+        <ul class="friend_ul">
+            <li>
+                <div class="user_div">
+                <img src="/img/user.png"/>
+                <div>
+                    <p class="username">Username</p>
+                </div>
+                </div>
+            </li>
+        </ul>
     </section>
     <nav>
         <a href="/" class="active">
