191224(fixed some code and added friend_list)

--- a/public/html/chats.html
+++ b/public/html/chats.html
@@ -67,7 +67,7 @@
             <div class="d2"></div>
             <div class="d3"></div>
         </div>
-        <div>
+        <div style="position:relative;">
             <input class="room_input" type="text" placeholder="방 이름"/>
             <div class="room_btns">
                 <button>방 생성</button>
