--- a/public/html/index.html
+++ b/public/html/index.html
@@ -36,16 +36,7 @@
             <p>Friends</p>
             <img class="friend_arrow up" src="/img/up_arrow.png">
         </div>
-        <ul class="friend_ul">
-            <li>
-                <div class="user_div">
-                <img src="/img/user.png"/>
-                <div>
-                    <p class="username">Username</p>
-                </div>
-                </div>
-            </li>
-        </ul>
+        <ul class="friend_ul f_down"></ul>
     </section>
     <nav>
         <a href="/" class="active">
@@ -77,6 +68,14 @@
                 <button class="signup_confirm">확인</button>
                 <button class="signup_cancel">취소</button>
             </div>
+        </div>
+    </div>
+    <div class="friend_info hide">
+        <div class="info_form">
+            <p>&times;</p>
+            <img src="/img/user.png"/>
+            <p>ID</p>
+            <button>추가하기</button>
         </div>
     </div>
     <script src="/js/clock.js"></script>
